Create functionality to display book info

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div>
+        <div id="books-container">
+            <h2>Books</h2>
+        </div>
         <dialog>
             <h3>Add a Book!</h3>
             <form>
