Implement functionality to remove a book

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" 
+        rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Library</title>
 </head>
@@ -24,23 +25,20 @@
             <form>
                 <div>
                     <label for="book-title-input" class="text-input">
-                        <!-- <div>Book Title</div> -->
                         <input type="text" id="book-title-input" required
-                        placeholder="Title">
+                            placeholder="Title">
                     </label>
                 </div>
                 <div>
                     <label for="book-author-input" class="text-input">
-                        <!-- <div>Book Author</div> -->
                         <input type="text" id="book-author-input" required
-                        placeholder="Author">
+                            placeholder="Author">
                     </label>
                 </div>
                 <div>
                     <label for="book-pages-input" class="text-input">
-                        <!-- <div>Number of Pages in Book</div> -->
                         <input type="number" id="book-pages-input" required
-                        placeholder="Number of Pages">
+                            placeholder="Number of Pages">
                     </label>
                 </div>
                 <div id="radio-input">
